// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hosts query fetch hosts 1`] = `
Object {
  "data": Object {
    "hosts": Object {
      "data": Array [
        Object {
          "account": "901578",
          "display_name": "test01.rhel7.jharting.local",
          "id": "6e7b6317-0a2d-4552-a2f2-b7da0aece49d",
          "modified_on": "2019-02-10 08:07:03.354312",
        },
      ],
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`hosts query ordering display_name ASC 1`] = `
Object {
  "data": Object {
    "hosts": Object {
      "data": Array [
        Object {
          "account": "901578",
          "display_name": "test01.rhel7.jharting.local",
          "id": "6e7b6317-0a2d-4552-a2f2-b7da0aece49d",
          "modified_on": "2019-02-10 08:07:03.354312",
        },
        Object {
          "account": "901578",
          "display_name": "test02.rhel7.jharting.local",
          "id": "22cd8e39-13bb-4d02-8316-84b850dc5136",
          "modified_on": "2019-01-10 08:07:03.354312",
        },
        Object {
          "account": "901578",
          "display_name": "test03.rhel7.jharting.local",
          "id": "f5ac67e1-ad65-4b62-bc27-845cc6d4bcee",
          "modified_on": "2019-03-10 08:07:03.354312",
        },
      ],
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`hosts query ordering display_name DESC 1`] = `
Object {
  "data": Object {
    "hosts": Object {
      "data": Array [
        Object {
          "account": "901578",
          "display_name": "test03.rhel7.jharting.local",
          "id": "f5ac67e1-ad65-4b62-bc27-845cc6d4bcee",
          "modified_on": "2019-03-10 08:07:03.354312",
        },
        Object {
          "account": "901578",
          "display_name": "test02.rhel7.jharting.local",
          "id": "22cd8e39-13bb-4d02-8316-84b850dc5136",
          "modified_on": "2019-01-10 08:07:03.354312",
        },
        Object {
          "account": "901578",
          "display_name": "test01.rhel7.jharting.local",
          "id": "6e7b6317-0a2d-4552-a2f2-b7da0aece49d",
          "modified_on": "2019-02-10 08:07:03.354312",
        },
      ],
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`hosts query ordering modified_on DESC 1`] = `
Object {
  "data": Object {
    "hosts": Object {
      "data": Array [
        Object {
          "account": "901578",
          "display_name": "test03.rhel7.jharting.local",
          "id": "f5ac67e1-ad65-4b62-bc27-845cc6d4bcee",
          "modified_on": "2019-03-10 08:07:03.354312",
        },
        Object {
          "account": "901578",
          "display_name": "test01.rhel7.jharting.local",
          "id": "6e7b6317-0a2d-4552-a2f2-b7da0aece49d",
          "modified_on": "2019-02-10 08:07:03.354312",
        },
        Object {
          "account": "901578",
          "display_name": "test02.rhel7.jharting.local",
          "id": "22cd8e39-13bb-4d02-8316-84b850dc5136",
          "modified_on": "2019-01-10 08:07:03.354312",
        },
      ],
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
